# intelce-wayland

./: .gitignore  COPYING  Makefile.am  configure.ac
egl/: Makefile.am
egl/wayland/: Makefile.am  wayland-egl-priv.h  wayland-egl.c  wayland-egl.pc.in
egl/wsegl/: Makefile.am  buffer.c  pf.c  pixmap.c  pixmap.h  util.c  wayland-wsegl.c  wayland-wsegl.h
gdl/: .gitignore  Makefile.am  wayland-gdl-server.c  wayland-gdl-server.h  wayland-gdl.h  wayland-gdl.pc.in
protocol/: Makefile.am  wayland-gdl.xml
